--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,4 +37,6 @@ dependencies {
 
     implementation 'com.google.android.material:material:1.1.0-alpha09'
     implementation 'de.hdodenhof:circleimageview:3.0.0'
+    implementation 'com.skyfishjy.ripplebackground:library:1.0.1'
+
 }
